--- a/Readme
+++ b/Readme
@@ -1,5 +1,6 @@
-✨ AI Resume & Portfolio Builder
+🤖 AI Resume & Portfolio Builder
 
+🚀 Live Demo : [buildmyfolioapp.netlify.app]  (https://buildmyfolioapp.netlify.app)
 Generate tailored resumes, cover letters, and portfolio websites in seconds — completely free, no login required.
 
 🧠 About
