--- a/Readme
+++ b/Readme
@@ -1,5 +1,7 @@
 🤖 AI Resume & Portfolio Builder
 
+[![Netlify Status](https://api.netlify.com/api/v1/badges/02ba29bb-ddf6-4461-b54e-65fda6669ebc/deploy-status)](https://app.netlify.com/projects/buildmyfolioweb/deploys)
+
 🚀 Live Demo : [buildmyfolioapp.netlify.app]  (https://buildmyfolioapp.netlify.app)
 Generate tailored resumes, cover letters, and portfolio websites in seconds — completely free, no login required.
 
